infra/kubernetes/mysql-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: dev
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: bitnami/mysql:8.0  # Use the desired mysql version
          ports:
            - containerPort: 3306
#          volumeMounts:
#            - name: mysql-data
#              mountPath: /var/lib/mysql
#      volumes:
#      - name: mysql-data
#        persistentVolumeClaim:
#          claimName: mysql-pvc
