infra/kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
