infra/kubernetes/virtual-service-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webserver-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webserver-virtual-service
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - webserver-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: "spring-webserver-service"
            port:
              number: 80
